# wnckmm

./: .gitignore  Makefile.am  README.md  configure.ac  libwnckmm.files
doc/: Makefile.am
doc/reference/: Doxyfile.in
m4/: generate-binding.am
tools/: Makefile.am
tools/extra_defs_gen/: generate_defs_wnck.cc
tools/m4/: class_wnckobject.m4  convert.m4  convert_wnckmm.m4  filelist.am
wnck/: wnckmm.h  wnckmm.pc.in
wnck/src/: Makefile.am  action-menu.ccg  action-menu.hg  application.ccg  application.hg  class-group.hg  filelist.am  pager.ccg  pager.hg  regenerate_defs.sh  screen.ccg  screen.hg  selector.ccg  selector.hg  tasklist.ccg  tasklist.hg  window.ccg  window.hg  wnck.defs  wnck_enums.defs  wnck_methods.defs  wnck_signals.defs  workspace.ccg  workspace.hg
wnck/wnckmm/: Makefile.am  filelist.am  init.cc  init.h  libwnck-wrapper.h  wrap_init.cc  wrap_init.h
